# pg-admin-genAi

./: CHANGELOG.md  Cargo.toml  README.md  config.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: agent.rs  config.rs  conversation.rs  db_client.rs  lib.rs  llm.rs  main.rs  ui.rs
src/ui/: actions.rs  app.rs  app_state.rs  connections.rs  editors.rs  handlers.rs  mod.rs  overlay_modal.rs  results.rs
tests/: dev-db.sh  seed.sql  structure.sql  test.sh  ui_smoke.rs
