[package]
name = "pg-admin"
version = "0.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
config = "0.15.14"
freya = { version = "0.3.4", features = ["custom-tokio-rt"] }
httpmock = "0.7.0"
itertools = "0.14.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.0", features = ["full"] }
freya-testing = "0.3.4"

[features]
default = ["custom-tokio-rt"]
custom-tokio-rt = ["freya/custom-tokio-rt"]
